--- a/css/styles.css
+++ b/css/styles.css
@@ -1,81 +1,3 @@
-/* цвет-акцент голубой color: #2196F3; */
-/* цвет заголовков color: #212121; */
-/* цвет текста color: #757575; */
-/* цвет белый color: #FFFFFF; */
-/* адрес в футере color: rgba(255, 255, 255, 0.6); */
-/* цвет мелкой подписи color: rgba(255, 255, 255, 0.4); */
-
-html {
-  box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-:root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --primary-white-color: #ffffff;
-  --secondary-white-color: rgba(255,
-      255,
-      255,
-      0.6);
-  /*белый полупрозрачный в футере в адресе*/
-  --primary-black-color: #000000;
-  --bg-subtitle-color: rgba(47, 48, 58, 0.8);
-  --bg-btn-fltr-color: #f5f4fa;
-  --author-color: rgba(255, 255, 255, 0.4);
-  /*мелкая подпись в самом низу*/
-  --bg-footer-color: #2f303a;
-}
-
-body {
-  background-color: var(--primary-white-color);
-  color: var(--primary-text-color);
-
-  font-family: 'Roboto', sans-serif;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  /* outline: 2px solid goldenrod; */
-}
-
-h1,
-h2,
-h3,
-p {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-button {
-  border: 0;
-  font-family: inherit;
-
-  cursor: pointer;
-}
-
-.list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
 /* Site nav */
 .header-studio {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -109,25 +31,6 @@ button {
   margin-right: 50px;
 }
 
-.logo {
-  display: block;
-  padding-top: 24px;
-  padding-bottom: 25px;
-  margin-right: 85px;
-
-  color: var(--primary-black-color);
-  text-decoration: none;
-
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-}
-
-.logo .accent {
-  color: var(--accent-color);
-}
 
 .site-nav .link {
   position: relative;
@@ -901,6 +804,9 @@ textarea:not(:placeholder-shown)+.form-label-comment {
 }
 
 /* Portfolio */
+.header-portfolio {
+  border-bottom: 1px solid #ececec;
+}
 
 .btn-container {
   display: flex;
