--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,9 @@
 @import "./components/page-header";
 @import "./components/page-hero";
 @import "./components/modal";
+@import "./components/page-features";
+@import "./components/page-specialization";
+@import "./components/page-team";
+@import "./components/page-clients";
+@import "./components/page-footer";
+@import "./components/page-portfolio";
