--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -41,3 +41,50 @@ button {
     margin: 0;
     list-style: none;
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+
+    .title {
+        color: $title-text-color;
+    }
+
+    &.underline {
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 1170px;
+            height: 1px;
+            background-color: #ececec;
+            right: 0;
+            margin: 0 auto;
+        }
+    }
+}
+
+/* Заголовки */
+.title.big {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    margin-bottom: 50px;
+}
