--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,9 @@
 /*белый полупрозрачный в футере в адресе*/
 /*мелкая подпись в самом низу*/
 body {
-  background-color: var(--primary-white-color);
-  color: var(--primary-text-color);
-  font-family: 'Roboto', sans-serif;
+  background-color: #ffffff;
+  color: #757575;
+  font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
 }
 
@@ -96,7 +96,7 @@ button {
   margin-right: 85px;
   color: #000000;
   text-decoration: none;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -461,7 +461,6 @@ textarea:not(:placeholder-shown) + .form-label-comment {
 .form-license label {
   font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
 }
 
 .form-license a {
@@ -960,33 +959,6 @@ textarea:not(:placeholder-shown) + .form-label-comment {
   width: 370px;
   color: inherit;
   text-decoration: none;
-  /* border-top-left-radius: 5px;
-  border-top-right-radius: 5px; 
-  overflow: hidden;*/
-}
-
-.card-thumb {
-  position: relative;
-  overflow: hidden;
-}
-
-.card-description {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  padding: 63px 24px;
-  color: #ffffff;
-  font-size: 18px;
-  line-height: 1.56;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card:hover .card-description,
@@ -1003,6 +975,11 @@ textarea:not(:placeholder-shown) + .form-label-comment {
   opacity: 1;
 }
 
+.card-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
 .card-thumb::before {
   display: inline-block;
   content: '';
@@ -1013,6 +990,25 @@ textarea:not(:placeholder-shown) + .form-label-comment {
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
   opacity: 0;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-description {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  padding: 63px 24px;
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 1.56;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
