--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,7 +7,7 @@
     color: $primary-black-color;
     text-decoration: none;
 
-    font-family: 'Raleway', sans-serif;
+    font-family: $logo-font;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
