--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -181,7 +181,7 @@ textarea:not(:placeholder-shown)+.form-label-comment {
     label {
         font-size: 14px;
         line-height: 1.71;
-        letter-spacing: 0.03em;
+        // letter-spacing: 0.03em;
     }
 
     a {
