--- a/sass/components/_page-portfolio.scss
+++ b/sass/components/_page-portfolio.scss
@@ -94,14 +94,40 @@
 
     color: inherit;
     text-decoration: none;
-    /* border-top-left-radius: 5px;
-  border-top-right-radius: 5px; 
-  overflow: hidden;*/
+
+    &:hover .card-description,
+    &:hover .card-thumb::before {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    &:focus .card-description,
+    &:focus .card-thumb::before {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 .card-thumb {
     position: relative;
     overflow: hidden;
+
+    &::before {
+        display: inline-block;
+        content: '';
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(33, 150, 243, 0.9);
+        opacity: 0;
+
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 .card-description {
@@ -123,34 +149,6 @@
         opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card:hover .card-description,
-.card:hover .card-thumb::before {
-    transform: translateY(0);
-    opacity: 1;
-}
-
-.card:focus .card-description,
-.card:focus .card-thumb::before {
-    transform: translateY(0);
-    opacity: 1;
-}
-
-.card-thumb::before {
-    display: inline-block;
-    content: '';
-
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(33, 150, 243, 0.9);
-    opacity: 0;
-
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .card-content {
     padding: 20px 24px;
